# systemd-input-focus

./: Cargo.toml  NOTES.md  README.md
sdtalk/src/: main.rs
src/: devices.rs  devices_task.rs  main.rs  main2.rs  messages.rs  poll.rs  sessions.rs  sessions_task.rs  systemd_service.rs
